# zkTEE

./: .gitignore  .gitmodules  Makefile  README.md  start-docker-real-sgx.sh  start-docker.sh
app/: Cargo.toml
app/src/: main.rs
enclave/: Cargo.toml  Xargo.toml  config.xml  enclave.edl
enclave/src/: hyperplonk_bench.rs  jf_plonk_bench.rs  lib.rs
