# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "helloworld"
version = "1.0.0"
authors = ["The Teaclave Authors"]
edition = "2021"

[lib]
name = "helloworld"
crate-type = ["staticlib"]

[features]
default = []

[target.'cfg(not(target_vendor = "teaclave"))'.dependencies]
sgx_types = { path = "../vendor/incubator-teaclave-sgx-sdk/sgx_types"}
sgx_tstd = { path = "../vendor/incubator-teaclave-sgx-sdk/sgx_tstd" }


[dependencies]
hyperplonk = {path = "../vendor/hyperplonk/hyperplonk"}
subroutines = { path = "../vendor/hyperplonk/subroutines" }
ark-serialize = { version = "^0.4.0", default-features = false, features = [ "derive" ] }
ark-std = { version = "^0.4.0", default-features = false }
ark-bls12-381 = { version = "0.4.0", default-features = false, features = [ "curve" ] }

jf-plonk = {git = "https://github.com/EspressoSystems/jellyfish", default-features = false, features = ["test-srs"]}
jf-utils = { version = "0.4.4", git = "https://github.com/EspressoSystems/jellyfish", tag = "0.4.5", default-features = false }
jf-relation = { version = "0.4.4", git = "https://github.com/EspressoSystems/jellyfish", tag = "0.4.5", default-features = false }
ark-ff = { version = "0.4.0", default-features = false, features = [ "asm" ] }
ark-bls12-377 = { version = "0.4.0", default-features = false, features = [ "curve" ] }
ark-bn254 = { version = "0.4.0", default-features = false, features = [ "curve" ] }
ark-bw6-761 = { version = "0.4.0", default-features = false }
